# ascii-redactor

./: .gitignore  ASCII-redactor.sln  README.md
ASCII-redactor/: ASCII-redactor.cpp  ASCII-redactor.vcxproj  ASCII-redactor.vcxproj.filters  CMakeLists.txt  Dockerfile  docker-compose.yml  plus.ascii
ASCII-redactor/include/: platform_compat.h  windows_compat.h
ASCII-redactor/include/canvas/: Canvas.h  Memento.h
ASCII-redactor/include/command/: ClearCommand.h  Command.h  CommandHistory.h  DrawLineCommand.h  DrawRectCommand.h  FloodFillCommand.h
ASCII-redactor/include/observer/: CanvasObserver.h  ConsoleRenderer.h
ASCII-redactor/include/state/: CursorState.h  LineToolState.h  RectToolState.h  ToolState.h
ASCII-redactor/include/ui/: EditorContext.h  InputHandler.h
ASCII-redactor/scenarios/: CMakeLists.txt  draw_line.cpp  draw_rectangle.cpp  flood_fill.cpp  save_load.cpp  undo_redo.cpp
ASCII-redactor/src/: main.cpp
ASCII-redactor/src/canvas/: Canvas.cpp  Memento.cpp
ASCII-redactor/src/command/: ClearCommand.cpp  Command.cpp  CommandHistory.cpp  DrawLineCommand.cpp  DrawRectCommand.cpp  FloodFillCommand.cpp
ASCII-redactor/src/observer/: ConsoleRenderer.cpp
ASCII-redactor/src/state/: CursorState.cpp  LineToolState.cpp  RectToolState.cpp
ASCII-redactor/src/ui/: EditorContext.cpp  InputHandler.cpp
ASCII-redactor/tests/: CMakeLists.txt  test_canvas.cpp  test_command_history.cpp  test_commands.cpp  test_editor_context.cpp  test_memento.cpp  test_tool_states.cpp
ASCII-redactor/tests/scenarios/: drawing_scenarios.cpp  file_operations_scenarios.cpp  undo_redo_scenarios.cpp
